<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/weatherLocation"
        >

        <SwitchPreference
            android:key="USE_DEVICE_LOCATION"
            android:title="@string/useDeviceLocation"
            android:summary="@string/useDeviceLocationSummary"
            android:defaultValue="true"
            android:disableDependentsState="true"
            />
        <EditTextPreference
             android:key="CUSTOM_LOCATION"
            android:title="@string/location"
            android:summary="@string/locationSummary"
            android:defaultValue="@string/locationDefaultValue"
            android:dependency="USE_DEVICE_LOCATION"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/units">
        <ListPreference
            android:key="UNIT_SYSTEM"
            android:title="@string/unitSystem"
            android:summary="%s"
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            />
    </PreferenceCategory>
</PreferenceScreen>